==> R-Fig-Con/ESP32-Wi-Fi-Firmware/wifi_firmware_esp32/src/cc1101/cc1101.cpp <==
#include "cc1101.h"
#include "Arduino.h" //various
#define cc1101_Select() digitalWrite(SS, LOW)
#define cc1101_Deselect() digitalWrite(SS, HIGH)
#define wait_Miso() while (digitalRead(MISO) > 0)
#define getGDO0state() digitalRead(CC1101_GDO0)
#define getGDO2state() digitalRead(CC1101_GDO2)
#define wait_GDO0_high() while (!getGDO0state())

void CC1101::writeReg(byte regAddr, byte value)
{
#ifndef CCA_FROM_GDO2_PIN
    taskENTER_CRITICAL(&myMutex);
#endif
    cc1101_Select();       // Select CC1101
    wait_Miso();           // Wait until MISO goes low
    SPI.transfer(regAddr); // Send register address
    SPI.transfer(value);   // Send value
    cc1101_Deselect();     // Deselect CC1101
#ifndef CCA_FROM_GDO2_PIN
    taskEXIT_CRITICAL(&myMutex);
#endif
}

void CC1101::writeBurstReg(byte regAddr, byte *buffer, byte len)
{
    byte addr, i;

    addr = regAddr | WRITE_BURST; // Enable burst transfer
    cc1101_Select();              // Select CC1101
    wait_Miso();                  // Wait until MISO goes low
    SPI.transfer(addr);           // Send register address

    for (i = 0; i < len; i++)
        SPI.transfer(buffer[i]); // Send value

    cc1101_Deselect(); // Deselect CC1101
}

void CC1101::cmdStrobe(byte cmd)
{
    cc1101_Select();   // Select CC1101
    wait_Miso();       // Wait until MISO goes low
    SPI.transfer(cmd); // Send strobe command
    cc1101_Deselect(); // Deselect CC1101
}

byte CC1101::readReg(byte regAddr, byte regType)
{
    byte addr, val;

    addr = regAddr | regType;

#ifndef CCA_FROM_GDO2_PIN
    taskENTER_CRITICAL(&myMutex);
#endif
    cc1101_Select();          // Select CC1101
    wait_Miso();              // Wait until MISO goes low
    SPI.transfer(addr);       // Send register address
    val = SPI.transfer(0x00); // Read result
    cc1101_Deselect();        // Deselect CC1101

#ifndef CCA_FROM_GDO2_PIN
    taskEXIT_CRITICAL(&myMutex);
#endif

    return val;
}

void CC1101::readBurstReg(byte *buffer, byte regAddr, byte len)
{
    byte addr, i;

    addr = regAddr | READ_BURST;
    cc1101_Select();    // Select CC1101
    wait_Miso();        // Wait until MISO goes low
    SPI.transfer(addr); // Send register address
    for (i = 0; i < len; i++)
        buffer[i] = SPI.transfer(0x00); // Read result byte by byte
    cc1101_Deselect();                  // Deselect CC1101
}

void CC1101::reset(void)
{
    cc1101_Deselect(); // Deselect CC1101
    delayMicroseconds(5);
    cc1101_Select(); // Select CC1101
    delayMicroseconds(10);
    cc1101_Deselect(); // Deselect CC1101
    delayMicroseconds(41);
    cc1101_Select(); // Select CC1101

    wait_Miso();               // Wait until MISO goes low
    SPI.transfer(CC1101_SRES); // Send reset command strobe
    wait_Miso();               // Wait until MISO goes low

    cc1101_Deselect(); // Deselect CC1101

    setCCregs(); // Reconfigure CC1101

#ifdef CCA_FROM_GDO2_PIN
    setMonitorCCA();
#endif
}

bool CC1101::sendData(CCPACKET packet)
{
    unsigned short remainingBytes = packet.length;

    // The radio can only (automatically) handle chunks of up to 64 bytes.
    // Compute the length of the last chunk and load it on the PKTLEN register.
    // Note: the +2 below is to account for the size of the packet length header
    // field.
    writeReg(CC1101_PKTLEN, (packet.length + 2) % 256);

    // Push the packet length to the TX FIFO buffer
    writeBurstReg(CC1101_TXFIFO, (byte *)&(packet.length), sizeof(packet.length));

    // For small packets (< 255 bytes), we need to change the transmission mode
    // to fixed length right here, otherwise it will not be changed in the main
    // transmission loop.
    if (packet.length < 255)
        setPacketLengthConfig(CC1101_LENGTH_CONFIG_FIXED);

    // Enable monitoring the TX FIFO through GDO2
    setMonitorTxFifo();

    // Put the radio into the TX state
    setTxState();

    // Wait until the transmission starts
    wait_GDO0_high_abort();

    // As space becomes available in the FIFO, push more
    // of the packet payload.
    while (remainingBytes > 0)
    {

        // Wait until there is data available on the FIFO
        while (getGDO2state())
        {
            if (!getGDO0state() && getGDO2state())
            {

                Serial.println("Premature end to the transmission!");

                // Clean-up
                setIdleState(); // Enter IDLE state
                flushTxFifo();  // Flush Tx FIFO

                // Put the radio back in infinite packet mode
                setPacketLengthConfig(CC1101_LENGTH_CONFIG_INFINITE);

#ifdef CCA_FROM_GDO2_PIN
                setMonitorCCA();
#endif

                // Enter back into RX state
                setRxState();

                return false;
            }
        }

        if (remainingBytes == 8)
        {

            // If less than 256 bytes remain, put the radio into
            // fixed length mode.
            setPacketLengthConfig(CC1101_LENGTH_CONFIG_FIXED);
        }

        // Push the next byte into the FIFO
        writeReg(CC1101_TXFIFO, packet.data[packet.length - remainingBytes]);
        remainingBytes--;
    }

    // Wait until the end of the packet transmission
    wait_GDO0_low();

    setIdleState(); // Enter IDLE state
    flushTxFifo();  // Flush Tx FIFO

    // Put the radio back in infinite packet mode
    setPacketLengthConfig(CC1101_LENGTH_CONFIG_INFINITE);

#ifdef CCA_FROM_GDO2_PIN
    setMonitorCCA();
#endif

    // Enter back into RX state
    setRxState();

    return true;
}
